feat: components dinamycs propertys

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,11 +5,25 @@
 <app-menu-title></app-menu-title>
 <div class="container_articles">
   <div class="articles_main">
-    <app-big-card></app-big-card>
+    <app-big-card ></app-big-card>
   </div>
   <div class="articles_others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card
+      photoCover="https://s2-techtudo.glbimg.com/8CyOZrWlUgWwrzCcz8Fp975dQu4=/1200x/smart/filters:cover():strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2023/s/Z/XLRGKPQKuNddKPBPwKPQ/black-panther-electronic-arts-marvel-games-avengers-jogo-cliffhanger.jpg"
+      cardTitle="Black Phanter images"
+    >
+
+    </app-small-card>
+    <app-small-card
+      photoCover="https://i.ytimg.com/vi/33-KvBH_en8/maxresdefault.jpg"
+      cardTitle="Iron man 4 images"
+    >
+
+    </app-small-card>
+    <app-small-card
+      photoCover="https://t.ctcdn.com.br/fWL5C5IN_-xr0DkokZjuGRfmUlQ=/1245x700/smart/i752854.jpeg"
+      cardTitle="The flash images"
+    >
+    </app-small-card>
   </div>
 </div>
