--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,16 +1,15 @@
 <div class="big-card_container">
   <div class="big-card_picture">
-    <img src="https://www.unfe.org/wp-content/uploads/2019/04/SM-placeholder.png" alt="">
+    <img src="{{photoCover}}" alt="">
   </div>
 
   <div class="big-card_title">
-    <h1><a href="">
-        Saiu a nova versão do angular
+    <h1><a href="#">
+        {{ cardTitle }}
       </a></h1>
   </div>
 
   <div class="big-card_description">
-      <p><a href="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum impedit pariatur at veritatis labore architecto
-        qui accusantium sed, vero accusamus error a natus aliquid aspernatur neque alias debitis nisi! Maxime? </a></p>
+      <p><a href="">{{ cardDescription }} </a></p>
   </div>
 </div>
