--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,12 +1,12 @@
 <div class="small-card_container">
   <div class="small-card_content">
     <div class="small-card_picture">
-      <img src="https://www.unfe.org/wp-content/uploads/2019/04/SM-placeholder.png" alt="">
+      <img src="{{ photoCover }}" alt="">
     </div>
 
     <div class="small-card_title">
       <h1><a href="">
-          Saiu a nova versão do angular
+          {{ cardTitle }}
         </a></h1>
     </div>
   </div>
