--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -4,12 +4,12 @@
   </div>
 
   <div class="big-card_title">
-    <h1><a href="#">
+    <h1><a [routerLink]="['content', Id]">
         {{ cardTitle }}
       </a></h1>
   </div>
 
   <div class="big-card_description">
-      <p><a href="">{{ cardDescription }} </a></p>
+      <p><a [routerLink]="['content', Id]">{{ cardDescription }} </a></p>
   </div>
 </div>
