--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="small-card_title">
-      <h1><a href="">
+      <h1><a [routerLink]="['content', Id]">
           {{ cardTitle }}
         </a></h1>
     </div>
